# lusol

./: CMakeLists.txt  README.md
cmake/: FindMATLAB.cmake
matlab/: CMakeLists.txt  lusol_test.m
src/: README.md  lusol.f90  lusol6b.f90  lusol7b.f90  lusol8b.f90  lusol_util.f90
